# tailtale

./: CMakeLists.txt  README.md
src/: bootmain.c  bootmain.h  gamemain_hq.c  grp_screen.c  grp_texture.c  grp_texture.h  input.c  puz_base.c  puz_base.h  puz_disp.h  puz_disp_hq.c  puz_trial_hq.c  sound.c
